--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "simple-ecart",
+  "homepage": "https://ShivkantaKale.github.io/e-ShoppingCard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,11 +16,14 @@
     "react-icons": "^4.7.1",
     "react-lightbox-component": "^1.2.1",
     "react-phone-input-2": "^2.15.1",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-use-cart": "^1.13.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -42,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
